# cpp-discord-bot

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindDPP.cmake
src/: main.cpp
